[project]
name = "python-parent"
version = "0.0.1"
description = "Python Parent for CDC Agents"

dependencies=[
    "python-di",
    "python-util",
    "drools_py",
    "aisuite",
    "model_server",
    "cdc_agents",
]

requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[tool.uv.sources]
python-di = {workspace = true}
python_util = {workspace = true}
drools_py = {workspace = true}
aisuite = {workspace = true}
model_server = {workspace = true}
cdc_agents = {workspace = true}